add_subdirectory(HelloWorld)
add_subdirectory(FunctionInjectLua)
add_subdirectory(ClassInjectLua)
add_subdirectory(GetGlobalVariable)
add_subdirectory(SetGlobalVariable)
add_subdirectory(CallLuaFunction)
add_subdirectory(MemberFunctionInjectLua)
add_subdirectory(MakeFunctor)
add_subdirectory(MultipleLuaFile)
add_subdirectory(LuaInterpreter)
add_subdirectory(LuaCompiler)
add_subdirectory(ExtensionModule)
add_subdirectory(LoadScriptFromBuffer)
