project(ExtensionModule)


if(MINGW)
	add_definitions(-O2 -g -Wall -Wextra -Werror -Wno-sizeof-pointer-div)
elseif(UNIX)
	add_definitions(-O2 -g -Wall -Wextra -Werror)
endif()


set(NAME "module")

include_directories(${LUAPP_INCLUDE_DIR})
link_directories(   ${LUAPP_LIBRARY_DIR})


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${LUAPP_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LUAPP_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})


add_library(${NAME} SHARED Module.cpp)

target_link_libraries(${NAME} ${LUAPP_LIBRARY_NAME})

if(UNIX OR MINGW)
	SET_TARGET_PROPERTIES(${NAME} PROPERTIES PREFIX "")
endif()

if(MSVC)
	set_target_properties(${NAME} PROPERTIES
		LIBRARY_OUTPUT_DIRECTORY            ${LUAPP_BINARY_DIR}
		LIBRARY_OUTPUT_DIRECTORY_DEBUG      ${LUAPP_BINARY_DIR}
		LIBRARY_OUTPUT_DIRECTORY_RELEASE    ${LUAPP_BINARY_DIR}
		RUNTIME_OUTPUT_DIRECTORY            ${LUAPP_BINARY_DIR}
		RUNTIME_OUTPUT_DIRECTORY_DEBUG      ${LUAPP_BINARY_DIR}
		RUNTIME_OUTPUT_DIRECTORY_RELEASE    ${LUAPP_BINARY_DIR}
		ARCHIVE_OUTPUT_DIRECTORY            ${PROJECT_BINARY_DIR}
		ARCHIVE_OUTPUT_DIRECTORY_DEBUG      ${PROJECT_BINARY_DIR}
		ARCHIVE_OUTPUT_DIRECTORY_RELEASE    ${PROJECT_BINARY_DIR}
	)
endif()
